# Projet

./: README.md
Gestiondesemployes/: Makefile  Makefile.in  config.h  config.status  configure  configure.in  gestiondesemployes.glade.bak
Gestiondesemployes/autom4te.cache/: requests  traces.1
Gestiondesemployes/po/: Makefile  Makefile.in
Gestiondesemployes/src/: Makefile  Makefile.am  Makefile.in  Ouvrier.c  callbacks.c  callbacks.h  controle.txt  gestiondesemployes  interface.c  interface.h  main.c
Partie1(ouvriers)/: Makefile  Makefile.am  config.status  gestiondesemployes.glade.bak  gestiondesemployes.gladep.bak
Partie1(ouvriers)/autom4te.cache/: output.1  requests  traces.0
Partie1(ouvriers)/src/: Makefile  Ouvrier.h  callbacks.c  callbacks.h  gestiondesemployes  interface.c
achraf/: Makefile  Makefile.in  config.h  config.status  configure  plante.txt  projet8.glade
achraf/autom4te.cache/: output.0  requests  traces.0  traces.1
achraf/pixmaps/: background
achraf2/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  partie2.glade.bak  partie2.gladep
projet8/: Makefile  config.status  projet8.glade.bak
projetfinal/: Makefile  config.status  projetfinal.glade
projetfinal/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  capteur.txt  employé.txt  humidite.txt  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  ouvrier.txt  plante.txt  projetfinal  temperature.txt  troupeau.c  troupeau.h  troupeau.txt
projetfinal/src/.deps/: callbacks.Po  plante.Po
(+75 files in other folders)
